[gd_scene load_steps=27 format=2]

[ext_resource path="res://meshes/heart_no_valves.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scripts/Heart.gd" type="Script" id=2]
[ext_resource path="res://shaders/heart.shader" type="Shader" id=3]
[ext_resource path="res://MonitorViewport.tscn" type="PackedScene" id=4]
[ext_resource path="res://shaders/BloodSplatter.tres" type="Material" id=5]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -1.89679, -0.459073, -0.0929708, -1.8516, -0.302933, 0.105948, -1.8475, -1.0118, -0.0116393, -1.80853, -1.16906, -0.404816, -1.76523, -0.423877, -0.480226, -1.693, -1.09157, -0.603804, -1.61633, -0.103937, -0.448002, -1.61291, -1.68153, -0.484182, -1.57118, -0.0701879, 1.0082, -1.5384, 0.333067, 0.22436, -1.53545, -1.76235, -0.643365, -1.52829, -0.77568, 0.963948, -1.49747, -1.21136, 0.857003, -1.4582, -0.0247019, 1.13445, -1.45636, -1.76199, 0.224055, -1.42382, -1.73645, -0.774926, -1.33755, -1.83975, 0.145725, -1.30431, -1.97776, -0.575438, -1.30046, -0.697378, -0.885251, -1.29985, -0.341283, -0.843914, -1.25727, 0.399849, -0.207088, -1.22357, -1.85517, -0.77385, -1.184, -1.37644, -0.894864, -1.1821, 0.255432, -0.569243, -1.17997, -0.697634, 1.20848, -1.10383, -2.0153, -0.294489, -1.10233, 0.491226, 1.01666, -1.1, -1.55793, 0.653711, -1.09897, -1.24215, 0.961681, -1.02399, -0.057298, 1.26477, -0.904162, -0.975866, -0.931534, -0.904157, 0.259933, 1.22194, -0.904124, -0.0977826, 1.26364, -0.825044, -0.419339, -0.886877, -0.746101, -1.13267, 1.05587, -0.70711, -0.026628, -0.72273, -0.706078, -1.9261, 0.0264706, -0.702409, -2.02694, -0.540509, -0.665917, -0.578131, 1.21752, -0.665423, 0.416935, -0.292379, -0.665319, 0.536835, 0.742, -0.663389, 0.546337, 0.545924, -0.629531, -1.75804, 0.380977, -0.625254, -1.77287, -0.811303, -0.624959, 0.300189, 1.18228, -0.590395, -1.44328, 0.773296, -0.55126, 0.401268, -0.207763, -0.515181, -1.63226, 0.495866, -0.470438, -1.84125, 0.0666803, -0.468133, -0.73685, -0.846082, -0.430591, -0.144877, 1.1321, -0.390569, -1.76426, -0.565926, -0.277214, -0.775903, 1.00803, -0.273289, -0.14527, -0.604077, -0.239441, -1.44093, 0.301739, -0.237433, -1.05072, 0.85164, -0.236713, 0.00915977, 0.0671102, -0.158289, -0.619263, 0.891348, -0.155335, -0.382233, -0.603572, -0.154097, -0.18428, 0.816447, -0.116807, -0.185719, -0.445253, -0.0674835, -1.17484, -0.492244, 0.00216664, -1.01263, -0.209316, 0.0454344, -0.420345, -0.289808 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/heart_color = Color( 1, 0.392157, 0.392157, 1 )
shader_param/bloat = 1.00317
shader_param/squish = 0.0
shader_param/squish_dir = Vector3( 0, 1, 0 )
shader_param/offset = Vector3( 1, 0.9, 0 )

[sub_resource type="SphereShape" id=3]
radius = 0.25

[sub_resource type="Animation" id=4]
resource_name = "heartbeat"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("CollisionShapePhysics/MeshInstance:material/0:shader_param/bloat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1.00317, -0.25, 0, 0.0478099, 0.00268185, 1.03851, -0.0306474, -0.00680387, 0.0269697, -0.00408232, 0.968434, -0.0343251, 0.00612342, 0.0306474, 0.0115665, 1.11404, -0.034325, -0.0054431, 0.128719, -0.0156487, 1, -0.144656, 0.0168508, 0.218209, -0.000680387 ),
"times": PoolRealArray( 0.00245179, 0.102975, 0.172851, 0.288085, 0.521005 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("CPUParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "heartbeat" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("CollisionShapePhysics/MeshInstance:material/0:shader_param/bloat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.144656, 0.0168508, 0.218209, -0.000680387 ),
"times": PoolRealArray( 0.00367767 )
}

[sub_resource type="Animation" id=6]
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("CollisionShapePhysics/MeshInstance:material/0:shader_param/squish")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.0478099, 0.00268185, 0, -0.144656, 0.0168508, 0.218209, -0.000680387 ),
"times": PoolRealArray( 0, 0.2 )
}

[sub_resource type="AnimationNodeAdd2" id=7]

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "heartbeat"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "unsquish"

[sub_resource type="AnimationNodeTimeSeek" id=11]

[sub_resource type="AnimationNodeBlend2" id=12]

[sub_resource type="AnimationNodeTimeSeek" id=13]

[sub_resource type="AnimationNodeBlendTree" id=14]
graph_offset = Vector2( 0, 48.75 )
nodes/Add2/node = SubResource( 7 )
nodes/Add2/position = Vector2( 900, 260 )
nodes/anim_heartbeat/node = SubResource( 8 )
nodes/anim_heartbeat/position = Vector2( 20, 240 )
nodes/anim_idle/node = SubResource( 9 )
nodes/anim_idle/position = Vector2( 20, 100 )
nodes/anim_unsquish/node = SubResource( 10 )
nodes/anim_unsquish/position = Vector2( 420, 380 )
nodes/enable_unsquish/node = SubResource( 11 )
nodes/enable_unsquish/position = Vector2( 680, 340 )
nodes/heartbeat_amplitude/node = SubResource( 12 )
nodes/heartbeat_amplitude/position = Vector2( 640, 120 )
nodes/heartbeat_restart/node = SubResource( 13 )
nodes/heartbeat_restart/position = Vector2( 360, 220 )
nodes/output/position = Vector2( 1180, 320 )
node_connections = [ "output", 0, "Add2", "heartbeat_amplitude", 0, "anim_idle", "heartbeat_amplitude", 1, "heartbeat_restart", "heartbeat_restart", 0, "anim_heartbeat", "Add2", 0, "heartbeat_amplitude", "Add2", 1, "enable_unsquish", "enable_unsquish", 0, "anim_unsquish" ]

[sub_resource type="SphereMesh" id=15]
material = ExtResource( 5 )
radius = 0.04
height = 0.08
radial_segments = 8
rings = 8

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 1, 0.392157, 0.392157, 1 )

[sub_resource type="CylinderMesh" id=17]
material = SubResource( 16 )
top_radius = 0.015
bottom_radius = 0.015
height = 0.15
radial_segments = 6

[sub_resource type="CylinderMesh" id=18]
top_radius = 0.025
bottom_radius = 0.025
height = 0.15
radial_segments = 6

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 1, 0.392157, 0.392157, 1 )

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 1, 0.392157, 0.392157, 1 )

[sub_resource type="CylinderMesh" id=21]
material = SubResource( 20 )
top_radius = 0.02
bottom_radius = 0.02
height = 0.15
radial_segments = 6

[node name="Heart" type="RigidBody"]
transform = Transform( 1.0131, -5.94569e-05, -8.20001e-05, 5.90786e-05, 1.01631, -0.00234951, 8.21373e-05, 0.00235695, 1.01309, 0, 0, 0 )
collision_layer = 2
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
jump_force = 7.0
speed_idle = 0.5
time_till_death = 6.0
timing_interval_good = 0.25

[node name="CollisionShapePhysics" type="CollisionShape" parent="."]
transform = Transform( 0.120551, 1.49392e-12, -2.72848e-12, -5.86198e-13, 0.120551, -1.45519e-10, -1.81899e-12, 1.74623e-10, 0.120551, 0.117188, 0.0909475, -0.0187147 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShapePhysics"]
transform = Transform( 1, 2.41585e-12, 7.27596e-12, 1.63425e-12, 1, -2.32831e-10, -7.27596e-12, -4.65661e-10, 1, 0, 0, 1.49012e-08 )
mesh = ExtResource( 1 )
material/0 = SubResource( 2 )

[node name="AreaInput" type="Area" parent="."]

[node name="CollisionInput" type="CollisionShape" parent="AreaInput"]
transform = Transform( 1, -2.63227e-05, -3.6418e-05, 2.63227e-05, 1, 1.1268e-09, 3.6418e-05, -2.08542e-09, 1, 0, 0, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/heartbeat = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/unsquish = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
parameters/Add2/add_amount = 1.0
parameters/enable_unsquish/seek_position = -1.0
parameters/heartbeat_amplitude/blend_amount = 1.0
parameters/heartbeat_restart/seek_position = -1.0

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 0.999999, 5.86908e-12, 1.45519e-11, -4.54889e-11, 0.999999, -6.98492e-10, 3.63798e-11, -1.39698e-09, 0.999999, 6.81341e-06, 0.176269, 0.0249431 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.75
local_coords = false
mesh = SubResource( 15 )
emission_shape = 3
emission_points = PoolVector3Array( 0, 0, 0, 0, 0, 0.07, 0, 0, -0.05 )
direction = Vector3( 0, 1, 0 )
spread = 5.0
initial_velocity = 2.0
color = Color( 1, 0.270588, 0.270588, 1 )

[node name="Viewport" parent="." instance=ExtResource( 4 )]

[node name="SoftBody" type="SoftBody" parent="."]
transform = Transform( 1, -7.34701e-12, 2.91038e-11, 1.31308e-11, 1, -8.61473e-09, 2.6921e-10, 6.0536e-09, 1, 0.00141913, 0.176137, -0.0253076 )
mesh = SubResource( 17 )
material/0 = null
collision_layer = 2
parent_collision_ignore = NodePath("..")
simulation_precision = 10
pinned_points = [ 35, 30, 37, 31, 32, 33, 34, 28, 29, 24, 25, 26, 27 ]
attachments/0/point_index = 35
attachments/0/spatial_attachment_path = NodePath("..")
attachments/0/offset = Vector3( -0.0115713, 0.101137, -0.0178076 )
attachments/1/point_index = 30
attachments/1/spatial_attachment_path = NodePath("..")
attachments/1/offset = Vector3( 0.00141913, 0.101137, -0.0103076 )
attachments/2/point_index = 37
attachments/2/spatial_attachment_path = NodePath("..")
attachments/2/offset = Vector3( 0.00141913, 0.101137, -0.0253076 )
attachments/3/point_index = 31
attachments/3/spatial_attachment_path = NodePath("..")
attachments/3/offset = Vector3( 0.0144095, 0.101137, -0.0178076 )
attachments/4/point_index = 32
attachments/4/spatial_attachment_path = NodePath("..")
attachments/4/offset = Vector3( 0.0144095, 0.101137, -0.0328076 )
attachments/5/point_index = 33
attachments/5/spatial_attachment_path = NodePath("..")
attachments/5/offset = Vector3( 0.00141913, 0.101137, -0.0403076 )
attachments/6/point_index = 34
attachments/6/spatial_attachment_path = NodePath("..")
attachments/6/offset = Vector3( -0.0115713, 0.101137, -0.0328076 )
attachments/7/point_index = 28
attachments/7/spatial_attachment_path = NodePath("..")
attachments/7/offset = Vector3( -0.0115713, 0.131137, -0.0328076 )
attachments/8/point_index = 29
attachments/8/spatial_attachment_path = NodePath("..")
attachments/8/offset = Vector3( -0.0115713, 0.131137, -0.0178076 )
attachments/9/point_index = 24
attachments/9/spatial_attachment_path = NodePath("..")
attachments/9/offset = Vector3( 0.00141913, 0.131137, -0.0103076 )
attachments/10/point_index = 25
attachments/10/spatial_attachment_path = NodePath("..")
attachments/10/offset = Vector3( 0.0144095, 0.131137, -0.0178076 )
attachments/11/point_index = 26
attachments/11/spatial_attachment_path = NodePath("..")
attachments/11/offset = Vector3( 0.0144095, 0.131137, -0.0328076 )
attachments/12/point_index = 27
attachments/12/spatial_attachment_path = NodePath("..")
attachments/12/offset = Vector3( 0.00141913, 0.131137, -0.0403076 )

[node name="SoftBody2" type="SoftBody" parent="."]
transform = Transform( 1, 0, 2.18279e-11, 1.31593e-11, 1, -9.54606e-09, 2.83762e-10, 6.0536e-09, 1, 0.0012265, 0.174013, 0.0218221 )
mesh = SubResource( 18 )
material/0 = SubResource( 19 )
parent_collision_ignore = NodePath("..")
simulation_precision = 10
pinned_points = [ 35, 30, 37, 31, 32, 33, 34, 27, 26, 28, 29, 24, 25 ]
attachments/0/point_index = 35
attachments/0/spatial_attachment_path = NodePath("..")
attachments/0/offset = Vector3( -0.0204241, 0.099013, 0.0343221 )
attachments/1/point_index = 30
attachments/1/spatial_attachment_path = NodePath("..")
attachments/1/offset = Vector3( 0.0012265, 0.099013, 0.0468221 )
attachments/2/point_index = 37
attachments/2/spatial_attachment_path = NodePath("..")
attachments/2/offset = Vector3( 0.0012265, 0.099013, 0.0218221 )
attachments/3/point_index = 31
attachments/3/spatial_attachment_path = NodePath("..")
attachments/3/offset = Vector3( 0.0228771, 0.099013, 0.0343221 )
attachments/4/point_index = 32
attachments/4/spatial_attachment_path = NodePath("..")
attachments/4/offset = Vector3( 0.0228771, 0.099013, 0.0093221 )
attachments/5/point_index = 33
attachments/5/spatial_attachment_path = NodePath("..")
attachments/5/offset = Vector3( 0.0012265, 0.099013, -0.0031779 )
attachments/6/point_index = 34
attachments/6/spatial_attachment_path = NodePath("..")
attachments/6/offset = Vector3( -0.0204241, 0.099013, 0.0093221 )
attachments/7/point_index = 27
attachments/7/spatial_attachment_path = NodePath("..")
attachments/7/offset = Vector3( 0.0012265, 0.129013, -0.0031779 )
attachments/8/point_index = 26
attachments/8/spatial_attachment_path = NodePath("..")
attachments/8/offset = Vector3( 0.0228771, 0.129013, 0.0093221 )
attachments/9/point_index = 28
attachments/9/spatial_attachment_path = NodePath("..")
attachments/9/offset = Vector3( -0.0204241, 0.129013, 0.0093221 )
attachments/10/point_index = 29
attachments/10/spatial_attachment_path = NodePath("..")
attachments/10/offset = Vector3( -0.0204241, 0.129013, 0.0343221 )
attachments/11/point_index = 24
attachments/11/spatial_attachment_path = NodePath("..")
attachments/11/offset = Vector3( 0.0012265, 0.129013, 0.0468221 )
attachments/12/point_index = 25
attachments/12/spatial_attachment_path = NodePath("..")
attachments/12/offset = Vector3( 0.0228771, 0.129013, 0.0343221 )

[node name="SoftBody3" type="SoftBody" parent="."]
transform = Transform( 1, -3.68061e-12, 2.18279e-11, 1.3145e-11, 1, -9.0804e-09, 2.76486e-10, 6.0536e-09, 1, 0.00123212, 0.179523, 0.0873541 )
mesh = SubResource( 21 )
material/0 = null
parent_collision_ignore = NodePath("..")
simulation_precision = 10
pinned_points = [ 35, 30, 37, 31, 32, 33, 34, 27, 26, 28, 29, 25, 24 ]
attachments/0/point_index = 35
attachments/0/spatial_attachment_path = NodePath("..")
attachments/0/offset = Vector3( -0.0160884, 0.104523, 0.0973541 )
attachments/1/point_index = 30
attachments/1/spatial_attachment_path = NodePath("..")
attachments/1/offset = Vector3( 0.00123212, 0.104523, 0.107354 )
attachments/2/point_index = 37
attachments/2/spatial_attachment_path = NodePath("..")
attachments/2/offset = Vector3( 0.00123212, 0.104523, 0.0873541 )
attachments/3/point_index = 31
attachments/3/spatial_attachment_path = NodePath("..")
attachments/3/offset = Vector3( 0.0185526, 0.104523, 0.0973541 )
attachments/4/point_index = 32
attachments/4/spatial_attachment_path = NodePath("..")
attachments/4/offset = Vector3( 0.0185526, 0.104523, 0.0773541 )
attachments/5/point_index = 33
attachments/5/spatial_attachment_path = NodePath("..")
attachments/5/offset = Vector3( 0.00123212, 0.104523, 0.0673541 )
attachments/6/point_index = 34
attachments/6/spatial_attachment_path = NodePath("..")
attachments/6/offset = Vector3( -0.0160884, 0.104523, 0.0773541 )
attachments/7/point_index = 27
attachments/7/spatial_attachment_path = NodePath("..")
attachments/7/offset = Vector3( 0.00123212, 0.134523, 0.0673541 )
attachments/8/point_index = 26
attachments/8/spatial_attachment_path = NodePath("..")
attachments/8/offset = Vector3( 0.0185526, 0.134523, 0.0773541 )
attachments/9/point_index = 28
attachments/9/spatial_attachment_path = NodePath("..")
attachments/9/offset = Vector3( -0.0160884, 0.134523, 0.0773541 )
attachments/10/point_index = 29
attachments/10/spatial_attachment_path = NodePath("..")
attachments/10/offset = Vector3( -0.0160884, 0.134523, 0.0973541 )
attachments/11/point_index = 25
attachments/11/spatial_attachment_path = NodePath("..")
attachments/11/offset = Vector3( 0.0185526, 0.134523, 0.0973541 )
attachments/12/point_index = 24
attachments/12/spatial_attachment_path = NodePath("..")
attachments/12/offset = Vector3( 0.00123212, 0.134523, 0.107354 )
[connection signal="input_event" from="AreaInput" to="." method="_on_collider_input"]
[connection signal="mouse_entered" from="AreaInput" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="AreaInput" to="." method="_on_mouse_exited"]
